# vino-project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.reflex  LICENSE  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  file_processor.py  hello.py  main.py  prompts.py  pyproject.toml  requirements.txt  rxconfig.py  start.sh  test_phase3_integration.py
.github/workflows/: ci.yml  deploy.yml
.web/: next.config.js  package.json  reflex.json
data/kb/: CMD.md  DOT.md  SCRUM.md
database/migrations/: 001_create_chat_sessions.py
docs/: bugs_encountered.md  chunking_strategies_research.md  ci-cd-architecture.md  error-handling-architecture.md  phase3_implementation.md  process.md
docs/architecture/: system-design.md
docs/process/: development.md
fastapi/src/: pyproject.toml
fastapi/src/app/: main.py
fastapi/src/app/core/: config.py  exceptions.py
fastapi/src/app/endpoints/: file_handler.py
fastapi/src/app/prompt_engineering/: matrix_definitions.py
fastapi/src/app/services/: chat_service.py  chunking_service.py  vector_db_service.py
file_upload/: file_processor.py  supabase-setup.md  upload-docs.md
reflex/reflex_ui/app/components/: input_area.py
reflex/reflex_ui/app/states/: chat_state.py
reflex_ui/: .gitignore  requirements.txt  rxconfig.py  style.py
reflex_ui/.web/: package.json  postcss.config.js  reflex.install_frontend_packages.cached  reflex.json  tailwind.config.js
reflex_ui/.web/pages/: 404.js  _app.js  _document.js  index.js
reflex_ui/.web/styles/: tailwind.css
reflex_ui/.web/utils/: components.js  context.js
reflex_ui/app/: app.py
reflex_ui/app/components/: chat_interface.py  input_area.py  message_bubble.py  navbar.py  typing_indicator.py
reflex_ui/app/states/: chat_state.py  state.py
src/: Dockerfile.fastapi  app.py  main.py  pyproject.toml  requirements.txt
src/app/: __init__.py  config.py  dependencies.py  main.py  models.py
src/app/core/: config.py
src/app/documents/: chunking.py  chunking_config.py
src/app/endpoints/: chat.py  health.py
src/app/prompt_engineering/: __init__.py  builder.py  matrix_definitions.py  templates.py
src/app/routers/: __init__.py  health.py  text.py
src/app/schemas/: models.py  text.py
src/app/services/: __init__.py  chat_service.py  chunking_service.py  document_service.py  extraction_service.py  file_system_service.py  ingestion_service.py  metadata_service.py  session_storage_service.py  supabase_service.py  text_analysis.py  vector_db_service.py
tests/: test_app.py  test_phase3.py  test_phase4.py
