[project]
name = "flowlined-zeb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = [
    "concurrent-openai>=1.2.2",
    "fastapi>=0.68.0",
    "gunicorn>=20.1.0",
    "httpx>=0.24.0",
    "langchain>=0.3.25",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=0.19.0",
    "ruff>=0.11.8",
    "uvicorn>=0.15.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
