[project]
name = "vino-project"
version = "0.1.0"
description = "A multi-service project with FastAPI and Reflex"
readme = "README.md"
requires-python = ">=3.12"

# Core dependencies shared by all services (if any)
dependencies = [
    "chromadb>=1.0.12",
    "langchain-google-genai>=2.0.10",
    "pypandoc>=1.15",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "reflex>=0.7.14",
    "tiktoken>=0.9.0",
]

[dependency-groups]
fastapi = [
    "chromadb>=1.0.4",
    "fastapi[standard]>=0.115.9",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.23",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.0.10",
    "langchain-text-splitters>=0.3.8",
    "pydantic>=2.11.3",
    "pypandoc>=1.15",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "redis",
    "supabase>=2.15.3",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.34.2",
]
reflex = [
    "reflex>=0.7.6",
]
dev = [
    "ruff>=0.11.12",
    "pytest>=8.4.0",
    "pyinstaller>=6.0.0",
    "supabase>=2.15.3",
    "tiktoken>=0.9.0",
    "chromadb>=1.0.12",
    "fastapi>=0.115.9",
    "google-generativeai>=0.8.5",
    "pypandoc>=1.15",
    "pypdf2>=3.0.1",
    "langchain-google-genai>=2.0.10",
    "pydantic>=2.11.3",
]
