[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.9",
    "langchain-core>=0.3.58",
    "pypandoc>=1.15",
    "python-multipart>=0.0.20",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.34.2",
]
